# rtfilter

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  autogen.sh  ccoeffilt.m  common-filters.c  common-filters.h  configure.ac  filter-sse.c  filter-templates.c  filter.c  filter.h  groups  meson.build  meson_options.txt  plotfilter.m  project.config  test_filter.c  test_timing.c
config/api-exports/: meson.build
debian/: changelog  control  copyright  librtfilter1-dev.install  librtfilter1.install  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  symbols
devtools/: api-compat-test.sh  coverage.sh  testapigen.sh  uncrustify.cfg
doc/: Makefile.am  conf.py  doxygen.cfg.in  index.rst  mainpage.dox  rtf_create_bandpass_analytic.3  rtf_create_butterworth.3  rtf_create_chebychev.3  rtf_create_downsampler.3  rtf_create_filter.3  rtf_create_filter_coeffs.3  rtf_create_fir_highpass.3  rtf_create_fir_lowpass.3  rtf_destroy_filter.3  rtf_filter.3  rtf_filter_combine.3  rtf_filter_set_lazy_init.3  rtf_get_type.3  rtf_get_version.3  rtf_init_filter.3  rtfilter.rst  sphinx-build-wrapper.sh
doc/examples/: Makefile  butterworth.c
m4/: .gitignore  api-exports.m4  fastmath.m4  hotspot.m4  mm_python_module.m4  pkg-ext.m4  simdtest.m4  warnings.m4
mmpack/: specs
src/: .gitignore  Makefile.am  common-filters.c  common-filters.h  complex-arithmetic.h  complex-simd.h  downsampler.c  exports.sym  filter-complex-double.c  filter-complex-single.c  filter-double.c  filter-func-template.c  filter-funcs.h  filter-inreal-outcomplex-double.c  filter-inreal-outcomplex-single.c  filter-internal.h  filter-real-double.c  filter-real-single.c  filter-single.c  filter-sse.c  filter-sse2.c  filter-sse3.c  filter-templates.c  filter.c  filter.h  init-filter-func-template.c  probesimd.h  rtf_common.h  rtfilter.h  rtfilter.pc.in  templates.c
test/: float-comparison.c  float-comparison.h  lowpass_test.c  perf-test.c  rtfilter_combine_test.c  rtfilter_test.c  test-common.c  test-common.h  testcases.h  unittests.c
tests/: Makefile.am  ccoeffilt.m  cheby-table.h  checkdown.m  checkfiltres.m  cmp-aligned-double.sh  cmp-aligned-float.sh  cmp-unaligned-double.sh  cmp-unaligned-float.sh  cmpwmatlab.c  compute_complex_filter.m  downsample.c  measure-rtfilter.c  plotfilter.m  test-complex-double.sh  test-complex-float.sh  test-double.sh  test-downsample.sh  test-float.sh  test_filter.c  test_timing.c  testchebyshev.c  testcomplex.c  testcomplex.m
